<resources>
    <string name="app_name">SDK</string>
    <string name="image_name">imag</string>
    <string name="dismiss_button_text_default">GOT IT</string>
    <string name="message_text_default">Message</string>
    <string name="title_text_default">Title</string>
    <string name="rate_me">Rate</string>
    <string name="dont_Ask">Don\'t ask again</string>
    <string name="later">Later</string>

</resources>
