<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/in_app_promo_width"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.zemosolabs.zetarget.sdk.InAppMessage"
    android:layout_gravity="center"
    android:background="@drawable/white_card_bg">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:background="@drawable/white_imgview_rounded_borders"
        android:id="@+id/img_container_rate_me"
        android:contentDescription="@string/image_name" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/title_text_default"
        android:id="@+id/title_rate_me"
        android:textSize="16sp"
        android:gravity="center"
        android:textColor="@color/dark_grey_campaign_button_text"
        android:background="@color/white"

        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/message_text_default"
        android:id="@+id/message_rate_me"
        android:textStyle="normal"
        android:textSize="14sp"
        android:gravity="center"
        android:textColor="@color/dark_grey_campaign_button_text"
        android:background="@color/white"

        android:layout_marginTop="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/white_button_bg"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/later"
            android:id="@+id/neutral_button_rate_me"
            android:textStyle="bold"
            android:textSize="14sp"
            android:gravity="center"
            android:textColor="@color/dark_grey_campaign_button_text"
            android:background="@drawable/grey_button_bg"
            android:padding="15dp"
            android:layout_marginTop="10dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/dont_Ask"
            android:id="@+id/dismiss_button_rate_me"
            android:textStyle="bold"
            android:textSize="14sp"
            android:gravity="center"
            android:textColor="@color/dark_grey_campaign_button_text"
            android:background="@drawable/grey_button_bg"
            android:padding="15dp"
            android:layout_marginTop="10dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/rate_me"
            android:id="@+id/action_button_rate_me"
            android:textStyle="bold"
            android:textSize="14sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/blue_button_bg"
            android:padding="15dp"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

            <!--http://stackoverflow.com/questions/12128331/how-to-change-fontfamily-of-textview-in-android -->

</LinearLayout>
